--- a/mysql57/docker-compose.yml
+++ b/mysql57/docker-compose.yml
@@ -16,6 +16,7 @@ services:
       SERVICE_NAME: mysql
     volumes:
       - mysql-volume-57:/var/lib/mysql:delegated
+      - ./docker-configs:/tmp
     network_mode: bridge
 volumes:
   mysql-volume-57:
