--- a/database/docker-compose.yml
+++ b/database/docker-compose.yml
@@ -1,8 +1,8 @@
 version: "3"
 
 services:
-  #MySQL Service
   mysql:
+    platform: linux/x86_64
     image: mysql:5.7.22
     container_name: mysql
     restart: unless-stopped
